# veloxx

./: .gitignore  Cargo.toml  README.md  build_failure.txt  check_output.txt
config/: default.toml
crates/ai-core/: Cargo.toml
crates/ai-core/src/: lib.rs
crates/alerting/: Cargo.toml
crates/alerting/src/: consumer.rs  dedup.rs  fanout.rs  incident.rs  main.rs  rules.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  db.rs  handlers.rs  main.rs  middleware.rs  router.rs  ws.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs  lib.rs  models.rs  telemetry.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: grpc.rs  http.rs  kafka.rs  main.rs  parser.rs  rate_limiter.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_initial_schema.sql
crates/storage/src/: clickhouse.rs  consumer.rs  main.rs  migrations.rs  qdrant.rs
dashboard/: Dockerfile  next.config.ts  package-lock.json
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/[tenant]/: layout.tsx
dashboard/src/app/[tenant]/ai-chat/: page.tsx
dashboard/src/app/[tenant]/logs/: page.tsx
dashboard/src/app/[tenant]/overview/: page.tsx
dashboard/src/app/login/: page.tsx
docker/: alerting.Dockerfile  api.Dockerfile  ingest.Dockerfile  storage.Dockerfile
infra/: docker-compose.yml
k8s/: veloxx-base.yaml  veloxx-deployments.yaml  veloxx-services.yaml
scripts/: dev.ps1  dev.sh  init_db.sh  migrate.sh  seed.sh  seed_data.sql
services/ai-engine/: Dockerfile  main.py  requirements.txt
