[package]
name    = "ai-core"
version.workspace = true
edition.workspace = true

[dependencies]
common     = { path = "../common" }
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }
