[package]
name    = "alerting"
version.workspace = true
edition.workspace = true

[[bin]]
name = "alerting"
path = "src/main.rs"

[dependencies]
common     = { path = "../common" }
ai-core    = { path = "../ai-core" }

tokio      = { workspace = true }
axum       = { workspace = true }
tower-http = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx       = { workspace = true }
reqwest    = { workspace = true }
futures    = { workspace = true }
