[package]
name    = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
common       = { path = "../common" }
ai-core      = { path = "../ai-core" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx         = { workspace = true }
clickhouse   = { workspace = true }
reqwest      = { workspace = true }
jsonwebtoken = { workspace = true }
bcrypt       = { workspace = true }
futures      = { workspace = true }
bytes        = { workspace = true }
async-trait  = { workspace = true }
