[package]
name    = "ingest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ingest"
path = "src/main.rs"

[dependencies]
common       = { path = "../common" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
axum         = { workspace = true }
tower-http   = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
regex        = { workspace = true }
once_cell    = { workspace = true }
prometheus   = { workspace = true }
tower        = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
