[package]
name    = "storage"
version.workspace = true
edition.workspace = true

[[bin]]
name = "storage"
path = "src/main.rs"

[dependencies]
common       = { path = "../common" }

tokio        = { workspace = true }
axum         = { workspace = true }
tower-http   = { workspace = true }
rdkafka      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx         = { workspace = true }
clickhouse   = { workspace = true }
reqwest      = { workspace = true }
bytes        = { workspace = true }
futures      = { workspace = true }
async-trait  = { workspace = true }
